# poetry-template

./: Makefile  README.md  pyproject.toml
